# ChangeLog for dev-perl/LWP-Authen-Wsse
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Authen-Wsse/ChangeLog,v 1.5 2012/04/11 03:05:39 jdhore Exp $

  11 Apr 2012; Jeff Horelick <jdhore@gentoo.org> LWP-Authen-Wsse-0.50.0.ebuild:
  marked x86 per bug 411411

  09 Oct 2011; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove tove from metadata.xml

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -LWP-Authen-Wsse-0.05.ebuild:
  Cleanup

*LWP-Authen-Wsse-0.50.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +LWP-Authen-Wsse-0.50.0.ebuild:
  Change version scheme

*LWP-Authen-Wsse-0.05 (01 Aug 2008)

  01 Aug 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +LWP-Authen-Wsse-0.05.ebuild:
  Initial commit
