@@ -1,4 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST LWP-Authen-Wsse-0.05.tar.gz 11412 RMD160 946da9337d1c120d080ef51ba89a2a307269c42a SHA1 fa44456a3996ca95e3e740ee656217cfef1e7613 SHA256 b2748fb27c93da77ef5b06fd8c2ddfc2fd0ce5fd58375a8906b2aafbfc21fbf2
-EBUILD LWP-Authen-Wsse-0.50.0.ebuild 504 RMD160 389da7b5020f7bd2ff4309031c97b25017d77eab SHA1 c05adc46659532bcbb4bdf86e28e9a5613029bd3 SHA256 32151ff4b2e94d5e33f236b444f8f993f2793af4edd85dd9723e61e1357eea26
-MISC ChangeLog 808 RMD160 589d69d0e047b766b8103451b9f3c5961b56f5b4 SHA1 ac03b6be310d1dabf280c88e18915ce38b908005 SHA256 63961f3873603b26a2337b0204f4a53b3052e5838f1342a91ffae028de0adcbf
+EBUILD LWP-Authen-Wsse-0.50.0.ebuild 500 RMD160 349a1195f68b31ccaa666d9dc1edaef9c2495d79 SHA1 a1c12821468ed7325b4a338fe367506418ddebae SHA256 559c2a19982f514e997b29fc7c3092801facaf04f7a5407575a0c64172590307
+MISC ChangeLog 922 RMD160 28864efad78cab1444399358411476221dd3c5c7 SHA1 f82ddfd4fd240fbc3ae108e9540a8b14bcde02ab SHA256 d41c2495f1f84507dee4077b99dbcd50bd0e59cfefe4f636ab84e48e5c5e92e4
 MISC metadata.xml 241 RMD160 e519c326664c6297a25b5bca10d215929fab929e SHA1 96dd31dd309579e08c286c8157f5a511571cc978 SHA256 ebd6c2c83a30f32c8480a870cbf16141d956682f2ccd4f1477ced8b019db11fd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPh+7jAAoJEOTDgjZ80txdHO4H/0Z7ZMO3uHc0pB7aGthHvaWg
+pe89UGmp5zt4fr+WZj1oOV5UaABBav1rk/J9Kh3vt30gNhMgtiSTnkr5JIJHCxoW
+cLGJQYh+oKGXu1R6MZANU4RufeQSQ70lIv9Qk5Zj+3k+agVjDLNGtoUFrSlMVr/r
+oVgFeSk/EzFwxBujf6//lgF3+qrPgrveWzR91b1G7fHySRV8br/bW10Ny86KE0w4
+RwbRi47G/pj1P1g/uBxEcsztGtIwSz8vgn/XfeywfDEta04r/e4uedMGH5S/R2UX
+B/glchVLiGt1d32S0hH3MRaxfA3Ph/C8pQAjPgDIRAeot9EgNoIPqWttqkulCo8=
+=9+Dn
+-----END PGP SIGNATURE-----
