@@ -1,4 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST XML-Atom-0.41.tar.gz 67309 RMD160 628897c5bb897f7d1c357aacb5784afa930d7227 SHA1 f0f0c6090ef6e616cc03d0570a474a0b40a4316f SHA256 48cac6c7841a430fa8de54dc3b876a018fbd442c122e41cc1713e6ead39a969e
-EBUILD XML-Atom-0.410.0.ebuild 685 RMD160 df180c438b41d37dd3f858cb1c155a1eb2875980 SHA1 a25758919c9a7dfa30fba6433ed799b729b89b11 SHA256 6b37bbd342fb6aa439d53dbcaef25fba540db7f2df836643e4f586d832401575
-MISC ChangeLog 2585 RMD160 4fd4b0b093a890ea10d5c5f31a7734f92405e780 SHA1 9e01027762233ea8cc2e092ec39ae2628dfd530b SHA256 d21cb0537ab0333395cc93aa108d7910abe995d6b3e9c34c6ded1e22d5ea54c5
+EBUILD XML-Atom-0.410.0.ebuild 681 RMD160 3b9af2613ab0730e22ae9b9bde33b877ca505246 SHA1 e5e7e8e55941240354ed2f6ff54430af9ccbf8cd SHA256 fb61384f8d1478e68e83b4351ead87d0255bcb243bea53270c72c4a74394c0f5
+MISC ChangeLog 2693 RMD160 0818a33584119fba672a08177ba998314cf16d95 SHA1 7074861012c7deff8500739a5eab273a0c81b6ea SHA256 5b79e6f06a08970865058cac26664b57e1e1100037ccca88ce94f6c23338e6b1
 MISC metadata.xml 234 RMD160 7bd2b311688bc7b1988941bd19871ce74621d2b6 SHA1 58a8a368a8ddab336315daddb94c1aebc36c5e7c SHA256 69d84ecd3b68e9e2c843e5b0e15d003209cb62f7ae2281b55caa2adb2169d706
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPh+9xAAoJEOTDgjZ80txd2jUH/juE2vmfSygXQn+ckYG7wbJT
+uA81hMphFKTSNSZr+DzoP6YjL1QAssVPyRlTslu3V4BJ5YV7Di793d0Af4+EyKsY
+3VahUIkWoHXN1FpZeQgrdiMKq5jDuQS9C7wzdR8xzprF2NDP+qm6u5nUVzvJp8LW
+8uc04Ox6fdZoIFuiuDP0CezFILEtMOiz+A/LJKwwzXEajCJq51WRse5favXEN4bZ
+Wf4Qjkw034W2klF/bvB/kd0KofhrST0kfKJXLes4stWSN/qGe0bB3xWBd9r7nECl
+DZBiYGL88SnQ2OA/3BTHELEdNh8SAtFpdS9bH25zMgCZUNgJGBjGtkJafI4iyfY=
+=lvUL
+-----END PGP SIGNATURE-----
