@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Atom/XML-Atom-0.410.0.ebuild,v 1.2 2012/04/11 03:12:23 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Atom/XML-Atom-0.410.0.ebuild,v 1.3 2012/04/13 09:18:35 ago Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Atom feed and API implementation"
 
 SLOT="0"
-KEYWORDS="~amd64 x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-perl/libwww-perl
