@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-Atom
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Atom/ChangeLog,v 1.21 2012/04/11 03:12:23 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Atom/ChangeLog,v 1.22 2012/04/13 09:18:35 ago Exp $
+
+  13 Apr 2012; Agostino Sarubbo <ago@gentoo.org> XML-Atom-0.410.0.ebuild:
+  Stable for amd64, wrt bug #411409
 
   11 Apr 2012; Jeff Horelick <jdhore@gentoo.org> XML-Atom-0.410.0.ebuild:
   marked x86 per bug 411409
