@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/LWP-Authen-Wsse
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Authen-Wsse/ChangeLog,v 1.5 2012/04/11 03:05:39 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Authen-Wsse/ChangeLog,v 1.6 2012/04/13 09:16:13 ago Exp $
+
+  13 Apr 2012; Agostino Sarubbo <ago@gentoo.org> LWP-Authen-Wsse-0.50.0.ebuild:
+  Stable for amd64, wrt bug #411411
 
   11 Apr 2012; Jeff Horelick <jdhore@gentoo.org> LWP-Authen-Wsse-0.50.0.ebuild:
   marked x86 per bug 411411
